Fix list stle position appearance on small screens

--- a/_src/assets/css/global.css
+++ b/_src/assets/css/global.css
@@ -253,6 +253,7 @@ ol {
 
 ul > li,
 ol > li {
+  list-style-position: inside;
   margin-top: var(--space-small);
 }
 
